// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_PRAYER_REQUEST"
      type="PRAYER_REQUEST"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_STEP"
      type="STEP"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_QUESTION"
      type="QUESTION"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_STORY"
      type="STORY"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_HELP_REQUEST"
      type="HELP_REQUEST"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_ANNOUNCEMENT"
      type="ANNOUNCEMENT"
    />
  </View>
</View>
`;

exports[`renders with feed items correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_PRAYER_REQUEST"
      type="PRAYER_REQUEST"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={
        Array [
          Object {
            "__typename": "Person",
            "firstName": "Janelle",
            "fullName": "Janelle Upton",
            "id": "11",
            "picture": "explicabo exercitationem ut",
          },
          Object {
            "__typename": "Person",
            "firstName": "Coty",
            "fullName": "Coty Vandervort",
            "id": "13",
            "picture": "ut ullam quos",
          },
          Object {
            "__typename": "Person",
            "firstName": "Caesar",
            "fullName": "Caesar Will",
            "id": "15",
            "picture": "officia quaerat cumque",
          },
        ]
      }
      testID="PostCard_STEP"
      type="STEP"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_QUESTION"
      type="QUESTION"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={Array []}
      testID="PostCard_STORY"
      type="STORY"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={
        Array [
          Object {
            "__typename": "Person",
            "firstName": "Mathias",
            "fullName": "Mathias Leannon",
            "id": "3",
            "picture": "debitis et saepe",
          },
        ]
      }
      testID="PostCard_HELP_REQUEST"
      type="HELP_REQUEST"
    />
    <PostTypeCardWithPeople
      onPress={[Function]}
      people={
        Array [
          Object {
            "__typename": "Person",
            "firstName": "Alison",
            "fullName": "Alison Goodwin",
            "id": "5",
            "picture": "ipsum inventore debitis",
          },
          Object {
            "__typename": "Person",
            "firstName": "Helena",
            "fullName": "Helena Osinski",
            "id": "7",
            "picture": "a velit provident",
          },
        ]
      }
      testID="PostCard_ANNOUNCEMENT"
      type="ANNOUNCEMENT"
    />
  </View>
</View>
`;

exports[`renders with global feed items correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithoutPeople
      onPress={[Function]}
      postsCount={0}
      testID="PostCard_PRAYER_REQUEST"
      type="PRAYER_REQUEST"
    />
    <PostTypeCardWithoutPeople
      onPress={[Function]}
      postsCount={1}
      testID="PostCard_STEP"
      type="STEP"
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <PostTypeCardWithoutPeople
      onPress={[Function]}
      postsCount={3}
      testID="PostCard_STORY"
      type="STORY"
    />
    <PostTypeCardWithoutPeople
      onPress={[Function]}
      postsCount={0}
      testID="PostCard_ANNOUNCEMENT"
      type="ANNOUNCEMENT"
    />
  </View>
</View>
`;
